@@ -707,7 +707,7 @@ TSS_Cleanup_Instance::~TSS_Cleanup_Instance (void)
 
   // scope the guard
   {
-    ACE_Guard<ACE_Thread_Mutex> guard (*mutex_);
+    ACE_GUARD_REACTION(ACE_Thread_Mutex, guard, *mutex_, ACE_UNEXPECTED(;));
     if (ptr_ != 0)
       {
         if (ACE_BIT_ENABLED (flags_, FLAG_DELETING))
@@ -1345,11 +1345,15 @@ ACE_OS::cond_wait (ACE_cond_t *cv,
 
 #   if defined (ACE_HAS_SIGNAL_OBJECT_AND_WAIT)
   if (external_mutex->type_ == USYNC_PROCESS)
-    // This call will automatically release the mutex and wait on the semaphore.
-    ACE_WIN32CALL (ACE_ADAPT_RETVAL (::SignalObjectAndWait (external_mutex->proc_mutex_,
-                                                            cv->sema_, INFINITE, FALSE),
-                                     result),
-                   int, -1, result);
+    {
+      // This call will automatically release the mutex and wait on the semaphore.
+      ACE_WIN32CALL (ACE_ADAPT_RETVAL (::SignalObjectAndWait (external_mutex->proc_mutex_,
+                                                              cv->sema_, INFINITE, FALSE),
+                                      result),
+                    int, -1, result);
+      if (result == -1)
+        return result;
+    }
   else
 #   endif /* ACE_HAS_SIGNAL_OBJECT_AND_WAIT */
     {
@@ -1399,7 +1403,8 @@ ACE_OS::cond_wait (ACE_cond_t *cv,
         // We must always regain the <external_mutex>, even when
         // errors occur because that's the guarantee that we give to
         // our callers.
-        ACE_OS::mutex_lock (external_mutex);
+        if (ACE_OS::mutex_lock (external_mutex) != 0)
+          return -1;
 
       return result;
       /* NOTREACHED */
@@ -1558,10 +1563,13 @@ ACE_OS::cond_timedwait (ACE_cond_t *cv,
                                          result),
                        int, -1, result);
       else
-        // We must always regain the <external_Mutex>, even when
-        // errors occur because that's the guarantee that we give to
-        // our callers.
-        ACE_OS::mutex_lock (external_mutex);
+        {
+          // We must always regain the <external_Mutex>, even when
+          // errors occur because that's the guarantee that we give to
+          // our callers.
+          if (ACE_OS::mutex_lock (external_mutex) != 0)
+            return -1;
+        }
 
       return result;
       /* NOTREACHED */
@@ -1571,16 +1579,20 @@ ACE_OS::cond_timedwait (ACE_cond_t *cv,
   // if" statement since the caller may have timed out and hence the
   // result would have been -1 above.
   if (last_waiter)
-    // Release the signaler/broadcaster if we're the last waiter.
+    {
+      // Release the signaler/broadcaster if we're the last waiter.
 #     if defined (ACE_WIN32)
-    ACE_OS::event_signal (&cv->waiters_done_);
+      if (ACE_OS::event_signal (&cv->waiters_done_) != 0)
 #     else
-    ACE_OS::sema_post (&cv->waiters_done_);
+      if (ACE_OS::sema_post (&cv->waiters_done_) != 0)
 #     endif /* ACE_WIN32 */
+        return -1;
+    }
 
   // We must always regain the <external_mutex>, even when errors
   // occur because that's the guarantee that we give to our callers.
-  ACE_OS::mutex_lock (external_mutex);
+  if (ACE_OS::mutex_lock (external_mutex) != 0)
+    return -1;
 
   return result;
 #   endif /* ACE_HAS_WTHREADS || ACE_HAS_VXWORKS */
@@ -1704,15 +1716,24 @@ ACE_OS::cond_timedwait (ACE_cond_t *cv,
     }
 
   if (last_waiter)
-    // Release the signaler/broadcaster if we're the last waiter.
-    ACE_OS::event_signal (&cv->waiters_done_);
-
+    {
+      // Release the signaler/broadcaster if we're the last waiter.
+      if (ACE_OS::event_signal (&cv->waiters_done_) != 0)
+        return -1;
+    }
+    
   // We must always regain the <external_mutex>, even when errors
   // occur because that's the guarantee that we give to our callers.
   if (ACE_OS::thread_mutex_lock (external_mutex) != 0)
     result = -1;
 
-  errno = error;
+  if (error != 0)
+    {
+      /* This assignment must only be done if error != 0,
+       *   since writing 0 to errno violates the POSIX specification.
+       */
+      errno = error;
+    }
   return result;
 #   endif
 #   else
@@ -1785,8 +1806,11 @@ ACE_OS::cond_wait (ACE_cond_t *cv,
         }
     }
   else if (last_waiter)
-    // Release the signaler/broadcaster if we're the last waiter.
-    ACE_OS::event_signal (&cv->waiters_done_);
+    {
+      // Release the signaler/broadcaster if we're the last waiter.
+      if (ACE_OS::event_signal (&cv->waiters_done_) != 0)
+        return -1;
+    }
 
   // We must always regain the <external_mutex>, even when errors
   // occur because that's the guarantee that we give to our callers.
@@ -1794,7 +1818,13 @@ ACE_OS::cond_wait (ACE_cond_t *cv,
     result = -1;
 
   // Reset errno in case mutex_lock() also fails...
-  errno = error;
+  if (error != 0)
+  {
+    /* This assignment must only be done if error != 0,
+    *   since writing 0 to errno violates the POSIX specification.
+    */
+    errno = error;
+  }
   return result;
 #endif
 #   else
@@ -2855,9 +2885,11 @@ ACE_OS::event_pulse (ACE_event_t *event)
         (!defined (ACE_LACKS_MUTEXATTR_PSHARED) || !defined (ACE_LACKS_CONDATTR_PSHARED))) || \
      (!defined (ACE_USES_FIFO_SEM) && \
         (!defined (ACE_HAS_POSIX_SEM) || !defined (ACE_HAS_POSIX_SEM_TIMEOUT) || defined (ACE_LACKS_NAMED_POSIX_SEM)))
-    ACE_OS::mutex_unlock (&event->eventdata_->lock_);
+    if (ACE_OS::mutex_unlock (&event->eventdata_->lock_) != 0)
+      return -1;
 # else
-    ACE_OS::sema_post (&event->lock_);
+    if (ACE_OS::sema_post (&event->lock_) != 0)
+      return -1;
 # endif
     if (result == -1)
       // Reset errno in case mutex_unlock() also fails...
@@ -2899,9 +2931,11 @@ ACE_OS::event_reset (ACE_event_t *event)
         (!defined (ACE_LACKS_MUTEXATTR_PSHARED) || !defined (ACE_LACKS_CONDATTR_PSHARED))) || \
      (!defined (ACE_USES_FIFO_SEM) && \
         (!defined (ACE_HAS_POSIX_SEM) || !defined (ACE_HAS_POSIX_SEM_TIMEOUT) || defined (ACE_LACKS_NAMED_POSIX_SEM)))
-    ACE_OS::mutex_unlock (&event->eventdata_->lock_);
+    if (ACE_OS::mutex_unlock (&event->eventdata_->lock_) != 0)
+      return -1;
 # else
-    ACE_OS::sema_post (&event->lock_);
+    if (ACE_OS::sema_post (&event->lock_) != 0)
+      return -1;
 # endif
   }
   else
@@ -2983,9 +3017,11 @@ ACE_OS::event_signal (ACE_event_t *event)
         (!defined (ACE_LACKS_MUTEXATTR_PSHARED) || !defined (ACE_LACKS_CONDATTR_PSHARED))) || \
      (!defined (ACE_USES_FIFO_SEM) && \
         (!defined (ACE_HAS_POSIX_SEM) || !defined (ACE_HAS_POSIX_SEM_TIMEOUT) || defined (ACE_LACKS_NAMED_POSIX_SEM)))
-    ACE_OS::mutex_unlock (&event->eventdata_->lock_);
+    if (ACE_OS::mutex_unlock (&event->eventdata_->lock_) != 0)
+      return -1;
 # else
-    ACE_OS::sema_post (&event->lock_);
+    if (ACE_OS::sema_post (&event->lock_) != 0)
+      return -1;
 # endif
 
     if (result == -1)
@@ -3181,9 +3217,11 @@ ACE_OS::event_timedwait (ACE_event_t *event,
         (!defined (ACE_LACKS_MUTEXATTR_PSHARED) || !defined (ACE_LACKS_CONDATTR_PSHARED))) || \
      (!defined (ACE_USES_FIFO_SEM) && \
         (!defined (ACE_HAS_POSIX_SEM) || !defined (ACE_HAS_POSIX_SEM_TIMEOUT) || defined (ACE_LACKS_NAMED_POSIX_SEM)))
-      ACE_OS::mutex_unlock (&event->eventdata_->lock_);
+      if (ACE_OS::mutex_unlock (&event->eventdata_->lock_) != 0)
+        return -1;
 # else
-      ACE_OS::sema_post (&event->lock_);
+      if (ACE_OS::sema_post (&event->lock_) != 0)
+        return -1;
 # endif
 
       if (result == -1)
@@ -3323,9 +3361,11 @@ ACE_OS::event_wait (ACE_event_t *event)
         (!defined (ACE_LACKS_MUTEXATTR_PSHARED) || !defined (ACE_LACKS_CONDATTR_PSHARED))) || \
      (!defined (ACE_USES_FIFO_SEM) && \
         (!defined (ACE_HAS_POSIX_SEM) || !defined (ACE_HAS_POSIX_SEM_TIMEOUT) || defined (ACE_LACKS_NAMED_POSIX_SEM)))
-      ACE_OS::mutex_unlock (&event->eventdata_->lock_);
+      if (ACE_OS::mutex_unlock (&event->eventdata_->lock_) != 0)
+        return -1;
 # else
-      ACE_OS::sema_post (&event->lock_);
+      if (ACE_OS::sema_post (&event->lock_) != 0)
+        return -1;
 # endif
 
       if (result == -1)
@@ -3476,10 +3516,14 @@ ACE_OS::rwlock_init (ACE_rwlock_t *rw,
     {
       // Save/restore errno.
       ACE_Errno_Guard error (errno);
-      ACE_OS::mutex_destroy (&rw->lock_);
-      ACE_OS::cond_destroy (&rw->waiting_readers_);
-      ACE_OS::cond_destroy (&rw->waiting_writers_);
-      ACE_OS::cond_destroy (&rw->waiting_important_writer_);
+
+      /* We're about to return -1 anyway, so
+       * no need to check return values of these clean-up calls:
+       */
+      (void)ACE_OS::mutex_destroy (&rw->lock_);
+      (void)ACE_OS::cond_destroy (&rw->waiting_readers_);
+      (void)ACE_OS::cond_destroy (&rw->waiting_writers_);
+      (void)ACE_OS::cond_destroy (&rw->waiting_important_writer_);
     }
   return result;
 # else
