@@ -1,3 +1,9 @@
+Thu Aug 26 10:20:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/OS_NS_Thread.cpp:
+          Changes implementing the patches from Bugzilla #3653 (with
+          changes and some rejects; *no* asserts allowed in ACE).
+
 Wed Aug 25 19:58:19 UTC 2010  Steve Huston  <shuston@riverace.com>
 
         * ace/Dev_Poll_Reactor.{h cpp}: Regarding change number 2 at
